--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "@babel/preset-env": "^7.10.2",
     "@babel/preset-react": "^7.10.1",
     "@babel/register": "^7.10.1",
-    "@material-ui/core": "^4.10.0",
+    "@material-ui/core": "^5.0.0-alpha.14",
     "@material-ui/icons": "^4.9.1",
     "@rollup/plugin-babel": "5.0.2",
     "@rollup/plugin-commonjs": "^12.0.0",
@@ -97,6 +97,8 @@
     "react-dom": "^16.8.0"
   },
   "dependencies": {
+    "@emotion/core": "^10.0.35",
+    "@emotion/styled": "^10.0.27",
     "clsx": "^1.1.1",
     "lodash.assignwith": "^4.2.0",
     "lodash.clonedeep": "^4.5.0",
